# Graphene

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Graphene.sln  imgui.ini
Dependencies/ImGui-Addons/FileBrowser/: ImGuiFileBrowser.cpp
Dependencies/ImGuiFileDialog/: ImGuiFileDialog.cpp  ImGuiFileDialog.h  ImGuiFileDialogConfig.h
Dependencies/SFML/lib/: sfml-audio-d.lib  sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-graphics-s.lib  sfml-graphics.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-d.lib  sfml-network-s-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-d.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-system.lib  sfml-window-d.lib  sfml-window-s.lib  sfml-window.lib
Dependencies/glad/src/: glad.c
Dependencies/glfw-3.3.4/docs/: news.dox
Dependencies/glfw-3.3.4/src/: window.c
Dependencies/imgui/: CMakeLists.txt  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
Dependencies/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
Dependencies/imgui/docs/: CHANGELOG.txt  README.md  Spectrum.md  TODO.txt
Dependencies/imgui/examples/example_allegro5/: main.cpp
Dependencies/imgui/examples/example_glfw_opengl2/: example_glfw_opengl2.vcxproj  example_glfw_opengl2.vcxproj.filters  main.cpp
Dependencies/imgui/examples/example_glfw_opengl3/: example_glfw_opengl3.vcxproj  example_glfw_opengl3.vcxproj.filters  main.cpp
Dependencies/imgui/examples/example_glfw_vulkan/: main.cpp
Dependencies/imgui/examples/example_glut_opengl2/: main.cpp
Dependencies/imgui/examples/example_marmalade/: main.cpp
Dependencies/imgui/examples/example_sdl_opengl2/: main.cpp
Dependencies/imgui/examples/example_sdl_opengl3/: main.cpp
Dependencies/imgui/examples/example_sdl_vulkan/: main.cpp
Dependencies/imgui/examples/example_win32_directx10/: example_win32_directx10.vcxproj  example_win32_directx10.vcxproj.filters  main.cpp
Dependencies/imgui/examples/example_win32_directx11/: example_win32_directx11.vcxproj  example_win32_directx11.vcxproj.filters  main.cpp
Dependencies/imgui/examples/example_win32_directx12/: example_win32_directx12.vcxproj  example_win32_directx12.vcxproj.filters
Dependencies/imgui/examples/example_win32_directx9/: example_win32_directx9.vcxproj  example_win32_directx9.vcxproj.filters  main.cpp
Dependencies/stduuid/include/: uuid.h
Dependencies/thread_pool/: thread_pool.hpp
Fonts/: Barlow+Material.cpp  Barlow+Material.h  imgui.ini
Graphene/: Application.cpp  Engine.hpp  ExceptionHandler.hpp  Graphene.hpp  Graphene.rc  Graphene.vcxproj  Graphene.vcxproj.filters  Renderer.hpp  Resources.hpp  Source.cpp  UI.hpp  UIEngine.hpp  imgui.ini  resource.h
Graphene/Source/: Application.cpp  Callbacks.hpp  ExceptionHandler.hpp
Graphene/Source/GUE/: GUE.h
Graphene/Source/Graphics/: Struct.hpp  Window.hpp
Graphene/Source/graphene/: BlockCutTree.hpp  BlockCutTreeBuilder.hpp  ConnectedComponent.hpp  Constants.hpp  Core.hpp  Graph.hpp  GraphIter.hpp  Graphene.h  Graphene.hpp  Include.h  Structure.hpp  Structures.hpp  Vector.hpp
Graphene/Source/gui/: AdjMatrixInput.hpp  ConvexHull.hpp  DebugWindow.hpp  GraphView.hpp  Include.h  Input.hpp  LogWindow.hpp  MainView.hpp  RawInput.hpp  Themes.hpp  Toolbar.hpp  Window.hpp  mainView.hpp  temp.hpp
Graphene/Source/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_textedit.h  imstb_truetype.h
Graphene/Source/utils/: ExceptionHandler.hpp  Log.hpp  ProfilerUtils.hpp  SmallestEnclosingCircle.hpp  UUIDGen.hpp
Illustrations/: illustrations.pptx
Miscellaneous/: icon_draft.ai
Source/: Application.cpp  main.cpp
Source-legacy/: Application.cpp
Source-legacy/graphene/: BlockCutTree.hpp  Structure.hpp  Vector.hpp
Source-legacy/gui/: Input.hpp  Themes.hpp  Window.hpp
Source-legacy/gui/GraphView/: Common.hpp  Renderer.hpp
Source-legacy/gui/RenderUtils/: ConvexHull.hpp
Source-legacy/tools/: config.hpp
Source-legacy/ui/: imgui_handler.hpp  imgui_include.hpp
Source-legacy/utils/: SmallestEnclosingCircle.hpp
Source/core/: BlockCutTree.hpp  BlockCutTreeBuilder.hpp  ConnectedComponent.hpp  Constants.hpp  Core.hpp  Edge.hpp  Graph.hpp  GraphIter.hpp  GraphicExporter.hpp  Include.h  Log.hpp  Structure.hpp  Vector.hpp  Vertex.hpp
Source/editor/: Include.h  include.h
Source/graphene/: BlockCutTreeBuilder.hpp  Constants.hpp  Core.hpp  Graph.hpp  Include.h  Structure.hpp
Source/gui/: ConvexHull.hpp  DebugWindow.hpp  Include.h  Themes.hpp  Toolbar.hpp  UIStyles.hpp  Window.hpp
Source/tools/: Log.hpp  Profiler.hpp  Random.hpp
Source/ui/: imgui_settings.hpp
Source/utils/: GenRandom.hpp  Log.hpp  ProfilerUtils.hpp  SmallestEnclosingCircle.hpp  UUIDGen.hpp
Sources/: Application.cpp  Main.cpp
Sources/Configs/: Configs.hpp
Sources/Core/: CmdBuffer.hpp  Core.hpp  Documentation.txt  File.hpp  Parser.hpp
Sources/Document/: Document.hpp
Sources/Editor/: Commands.hpp  Console.cpp  DebugGraphView.hpp  DocsMgr.cpp  Documents.hpp  Editor.cpp  Editor.h  Editor.hpp  EditorManager.hpp  HotKey.hpp  HotKeyHandler.cpp  HotKeyHandler.h  Logs.hpp  PropertiesPanel.cpp
Sources/Graph/: Graph.cpp  Graph.h
Sources/Interface/: Interface.hpp  LockingBuffer.hpp  TripleBuffer.hpp
Sources/Logging/: Logging.hpp
Sources/Objects/: Color.hpp  Command.cpp  Command.h  Command.hpp  Parsables.hpp  Serializable.cpp  Serializable.h  Uuid.cpp  Uuid.h  Uuid.hpp  Vec2.cpp  Vec2.h  Vec2f.hpp
Sources/Parser/: Parser.hpp
Sources/Preferences/: KeyBind.hpp  Preferences.hpp
Sources/Properties/: EdgeProps.cpp  EdgeProps.h  EdgeProps.hpp  Properties.cpp  Properties.h  Properties.hpp  PropertiesCmd.hpp  PropertiesParser.cpp  UserProps.hpp  VertexProps.cpp  VertexProps.h  VertexProps.hpp
Sources/Structure/: Component.cpp  Component.h  Componentifier.cpp  Edge.hpp  Structure.h  Structure.hpp  Vertex.hpp
Sources/System/: Random.hpp  Timer.hpp
Sources/UserGraph/: UserGraph.hpp
(+305 files in other folders)
